[package]
name = "lmgpt"
version = "0.1.5"
authors = ["Andrew <andrew@subarctic.org>"]
license = "MIT"
description = "Use LM programs to drive ChatGPT in a functional style"
edition = "2018"
readme = "README.md"
repository = "https://github.com/andrew-johnson-4/lmgpt"
keywords = ["chatgpt","functional","programming"]

[dependencies]
lambda_mountain = { version="0.0.16" }
openai_api_rust = { version="0.1.8" }
